--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,16 +6,16 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.8.8",
-    "@material-ui/core": "^4.9.5",
+    "@babel/standalone": "^7.9.0",
+    "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@material-ui/styles": "^4.9.0",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/styles": "^4.9.6",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^7.11.0",
+    "firebase": "^7.12.0",
     "firepad": "1.5.3",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
@@ -29,10 +29,10 @@
     "parse5": "^5.1.1",
     "prop-types": "^15.7.2",
     "randomcolor": "^0.5.4",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-autosuggest": "^9.4.3",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.16.0",
     "react-inspector": "^2.3.1",
@@ -46,20 +46,21 @@
     "store": "^2.0.12"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/node": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-transform-object-assign": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "7.9.0",
+    "@babel/preset-react": "7.9.1",
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.0.0",
-    "@types/react": "^16.9.23",
-    "babel-eslint": "9.0.0",
-    "babel-loader": "8.0.5",
+    "@types/react": "^16.9.25",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-preval": "^2.0.1",
@@ -69,25 +70,28 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.1",
-    "eslint": "5.12.0",
+    "eslint": "^6.6.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.19.0",
-    "install-peers": "^1.0.3",
     "react-app-rewired": "^2.1.5",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "3.4.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
-    "source-map-explorer": "^1.8.0"
+    "source-map-explorer": "^1.8.0",
+    "typescript": "^3.8.3",
+    "node-sass": "^4.13.1",
+    "sass": "^1.3.2",
+    "fibers": "^4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "start-url": "cross-env PUBLIC_URL='https://seecode.run' react-app-rewired start",
-    "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/; rm -rf ./build/fireco/monaco-editor/esm/",
-    "build-monaco-amd": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/;rm -rf ./build/fireco/monaco-editor/esm/;rm -rf ./build/fireco/monaco-editor/min-maps/; ",
-    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false react-app-rewired build",
-    "build-dev": "firebase use development; cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired build; rm -rf ./build/fireco/monaco-editor/esm/; firebase use default",
+    "start-url": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired start",
+    "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/",
+    "build-monaco-amd": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/ & rm -rf ./build/fireco/monaco-editor/min-maps/",
+    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
+    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired build & rm -rf ./build/fireco/monaco-editor/esm/",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "test": "react-app-rewired test --env=jsdom",
