--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.9.3",
+    "@babel/standalone": "^7.9.4",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
@@ -15,7 +15,7 @@
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^7.12.0",
+    "firebase": "^7.13.1",
     "firepad": "1.5.3",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
@@ -54,35 +54,35 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
     "@babel/plugin-transform-object-assign": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.1",
-    "@babel/register": "7.0.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/register": "7.9.0",
     "@babel/runtime": "7.0.0",
-    "@types/react": "^16.9.25",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "@types/react": "^16.9.26",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-preval": "^2.0.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-env": "^1.7.0",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.6.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.19.0",
     "react-app-rewired": "^2.1.5",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
-    "source-map-explorer": "^1.8.0",
+    "source-map-explorer": "^2.4.1",
     "typescript": "^3.8.3",
     "node-sass": "^4.13.1",
-    "sass": "^1.3.2",
+    "sass": "^1.26.3",
     "fibers": "^4.0.2"
   },
   "scripts": {
