--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,42 +6,40 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.9.4",
-    "@material-ui/core": "^4.9.7",
+    "@babel/standalone": "^7.9.5",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
-    "@material-ui/styles": "^4.9.6",
+    "@material-ui/lab": "^4.0.0-alpha.50",
+    "@material-ui/styles": "^4.9.10",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^7.13.1",
-    "firepad": "1.5.3",
+    "firebase": "^7.14.1",
+    "firepad": "^1.5.10",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.13",
     "jscodeshift": "^0.7.0",
-    "jss": "^9.8.7",
     "lodash": "^4.17.15",
-    "mdi-material-ui": "^6.13.0",
+    "mdi-material-ui": "^6.13.2",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
-    "parse5": "^5.1.1",
+    "parse5": "^6.0.0",
     "prop-types": "^15.7.2",
     "randomcolor": "^0.5.4",
     "react": "^16.13.1",
-    "react-autosuggest": "^9.4.3",
+    "react-autosuggest": "^10.0.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^0.18.3",
     "react-highlight-words": "^0.16.0",
     "react-inspector": "^5.0.1",
-    "react-jss": "^8.6.1",
-    "react-redux": "^5.1.2",
+    "react-redux": "^7.2.0",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.5",
     "save": "^2.4.0",
     "store": "^2.0.12"
   },
@@ -51,19 +49,19 @@
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
     "@babel/plugin-transform-object-assign": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "7.9.0",
-    "@babel/runtime": "7.0.0",
-    "@types/react": "^16.9.26",
+    "@babel/runtime": "7.9.2",
+    "@types/react": "^16.9.34",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-preval": "^2.0.1",
+    "babel-plugin-preval": "^5.0.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
@@ -79,11 +77,8 @@
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
-    "source-map-explorer": "^2.4.1",
-    "typescript": "^3.8.3",
-    "node-sass": "^4.13.1",
-    "sass": "^1.26.3",
-    "fibers": "^4.0.2"
+    "source-map-explorer": "^2.4.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -97,10 +92,23 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "engines": {
+    "node": "10",
+    "npm": "6"
+  }
 }
