--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -1,50 +1,58 @@
 {
   "name": "scr-app",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "sideEffects": false,
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.9.5",
-    "@material-ui/core": "^4.9.11",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.50",
-    "@material-ui/styles": "^4.9.10",
-    "autosuggest-highlight": "^3.1.1",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.5",
     "classnames": "^2.2.6",
-    "deep-diff": "^1.0.2",
-    "firebase": "^7.14.1",
-    "firepad": "^1.5.10",
-    "jquery": "^3.4.1",
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/styles": "^4.9.13",
+    "mdi-material-ui": "^6.14.0",
+    "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
-    "jsan": "^3.1.13",
-    "jscodeshift": "^0.7.0",
-    "lodash": "^4.17.15",
-    "mdi-material-ui": "^6.13.2",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
+    "@babel/standalone": "^7.9.6",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "firebase": "^7.14.3",
+    "firepad": "^1.5.10",
+    "jscodeshift": "^0.9.0",
     "parse5": "^6.0.0",
-    "prop-types": "^15.7.2",
+    "jsan": "^3.1.13",
+    "deep-diff": "^1.0.2",
+    "match-sorter": "^4.1.0",
+    "save": "^2.4.0",
+    "store": "^2.0.12",
+    "immutability-helper": "^3.0.2",
+    "lodash": "^4.17.15",
     "randomcolor": "^0.5.4",
-    "react": "^16.13.1",
-    "react-autosuggest": "^10.0.0",
+    "react-autosuggest": "^10.0.2",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-grid-layout": "^0.18.3",
     "react-highlight-words": "^0.16.0",
     "react-inspector": "^5.0.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-observable": "^1.2.0",
-    "rxjs": "^6.5.5",
-    "save": "^2.4.0",
-    "store": "^2.0.12"
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "autosuggest-highlight": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-numeric-separator": "^7.8.3",
@@ -77,7 +85,8 @@
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "bundle-buddy": "^0.2.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -85,7 +94,7 @@
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/",
     "build-monaco-amd": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/ & rm -rf ./build/fireco/monaco-editor/min-maps/",
     "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired --max_old_space_size=4096 build",
-    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired build & rm -rf ./build/fireco/monaco-editor/esm/",
+    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired --max_old_space_size=4096 build",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "test": "react-app-rewired test --env=jsdom",
